# marketplace-API-template

./: README.md  manage.py  pyproject.toml
config/: settings.py  urls.py
custom_user/: admin.py  models.py  serializers.py  services.py  urls.py  user_manager.py  views.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
